# imgtsero

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  bump_version.py  example_usage.py  flake.nix  imgtsero_kir_issue.md  pyproject.toml  requirements.txt  setup.py  test_b27_fix.py  test_kir_detail.py  test_kir_issue.py
imgtsero/: __init__.py  __main__.py  converter.py  downloader.py  kir_ligand.py  parser.py
tests/: __init__.py  test_bead_comprehensive.py  test_bead_mapping.py  test_converter.py  test_downloader.py  test_kir_ligand.py  test_parser.py  test_setup.py
tests/data/: bead_mapping.csv
