[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgtsero"
version = "0.4.4"
description = "A Python library for downloading and working with IMGT/HLA data files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Tavi Nathanson"},
]
keywords = ["HLA", "IMGT", "immunogenetics", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []  # No external dependencies

[project.urls]
Homepage = "https://github.com/tavinathanson/imgtsero"
"Bug Reports" = "https://github.com/tavinathanson/imgtsero/issues"
Source = "https://github.com/tavinathanson/imgtsero"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.scripts]
imgtsero = "imgtsero.__main__:main"

[tool.setuptools]
packages = ["imgtsero"]

[tool.setuptools.package-data]
imgtsero = ["py.typed"]